--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 bcpandas==0.7.1
 beautifulsoup4==4.9.1
+certifi==2020.6.20
+chardet==3.0.4
+idna==2.10
+lxml==4.5.2
+numpy==1.19.1
+oauthlib==3.1.0
 pandas==1.1.0
 pandas-datareader==0.9.0
 psycopg2==2.8.5
 pyodbc==4.0.30
+python-dateutil==2.8.1
+pytz==2020.1
 requests==2.24.0
 requests-oauthlib==1.2.0
+six==1.15.0
+soupsieve==2.0.1
 SQLAlchemy==1.3.19
 urllib3==1.25.6
 virtualenv==16.7.7
