Moved code in 'src' folder. Refactored as required for import statements.

--- a/spark/.vscode/settings.json
+++ b/spark/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "c:\\MyWork\\GIT\\python\\venv\\Scripts\\python.exe",
-    "debug.node.autoAttach": "off"
+    "debug.node.autoAttach": "off",
+	"python.autoComplete.extraPaths" : ["./src", ".\\src"]
 }
