--- a/airflow/airflow.cfg
+++ b/airflow/airflow.cfg
@@ -71,7 +71,7 @@ executor = SequentialExecutor
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = sqlite:///C:\Users\ketan/airflow/airflow.db
+sql_alchemy_conn = postgresql+psycopg2://airflow:airflow_secret@localhost:5432/airflow
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
