--- a/spark/.env
+++ b/spark/.env
@@ -6,3 +6,4 @@ export PARTITIONS=10
 export SPARK_MASTER=local[2]
 export SPARK_EXECUTORS=2
 export SPARK_CORES_PER_EXECUTOR=1
+export SPARK_CHECKPOINT_DIR=.
