Resolved reason for partitions in union doubling everytime. Had to coalesce.

--- a/spark/.env
+++ b/spark/.env
@@ -7,3 +7,4 @@ export SPARK_MASTER=local[2]
 export SPARK_EXECUTORS=2
 export SPARK_CORES_PER_EXECUTOR=1
 export SPARK_CHECKPOINT_DIR=.
+export SPARK_EXECUTOR_HB_INTERVAL=20000
