--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ venv/
 __pycache__/
 .env
 .mypy_cache/
+.metals/
+.bloop/
+.ammonite/
+metals.sbt
+project/
+.gradle/
+.idea/
+build/
+**/build/
+**/.idea/
+**/.gradle/
+**/target/
+**/out/
+**/gradle/
+.vscode/
