--- a/CapcoTest/requirements.txt
+++ b/CapcoTest/requirements.txt
@@ -2,7 +2,7 @@ aiofiles==23.2.1
 annotated-types==0.5.0
 attrs==23.1.0
 exceptiongroup==1.1.3
-hypothesis==6.88.1
+hypothesis==6.79.4
 numpy==1.26.0
 pandas==2.1.1
 pydantic==2.4.2
@@ -13,3 +13,4 @@ six==1.16.0
 sortedcontainers==2.4.0
 typing_extensions==4.8.0
 tzdata==2023.3
+ruff=0.1.3
